// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`首进骨架与真版式对齐 > AnomalyView:骨架块高序列(浏览器实测过) 1`] = `
[
  "560",
  "chart250",
  "chart200",
  "193",
  "237",
  "237",
  "264",
]
`;

exports[`首进骨架与真版式对齐 > BreakevenView:骨架块高序列(浏览器实测过) 1`] = `
[
  "chart300",
  "20",
  "chart300",
  "chart250",
]
`;

exports[`首进骨架与真版式对齐 > BudgetView:骨架块高序列(浏览器实测过) 1`] = `
[
  "chart300",
  "420",
]
`;

exports[`首进骨架与真版式对齐 > ChargingAnalysisView:骨架块高序列(浏览器实测过) 1`] = `
[
  "chart250",
  "chart300",
  "chart250",
  "44",
  "chart250",
  "chart250",
]
`;

exports[`首进骨架与真版式对齐 > ChurnView:骨架块高序列(浏览器实测过) 1`] = `
[
  "chart300",
  "330",
  "420",
  "chart300",
]
`;

exports[`首进骨架与真版式对齐 > CockpitView:骨架块高序列(浏览器实测过) 1`] = `
[
  "chart280",
  "chart250",
  "chart250",
  "chart250",
  "258",
  "chart300",
  "chart300",
  "chart280",
  "chart250",
  "chart250",
]
`;

exports[`首进骨架与真版式对齐 > ElecAnalysisView:骨架块高序列(浏览器实测过) 1`] = `
[
  "chart300",
  "chart300",
  "chart300",
]
`;

exports[`首进骨架与真版式对齐 > ExpenseView:骨架块高序列(浏览器实测过) 1`] = `
[
  "chart300",
  "chart300",
  "chart250",
  "190",
]
`;

exports[`首进骨架与真版式对齐 > ExpiryView:骨架块高序列(浏览器实测过) 1`] = `
[
  "chart250",
  "280",
  "480",
  "44",
  "112",
  "182",
  "chart300",
  "chart300",
  "480",
]
`;

exports[`首进骨架与真版式对齐 > ParkEnergyView:骨架块高序列(浏览器实测过) 1`] = `
[
  "chart250",
  "chart150",
  "chart260",
  "chart230",
  "chart128",
]
`;

exports[`首进骨架与真版式对齐 > ParkView:骨架块高序列(浏览器实测过) 1`] = `
[
  "446",
  "448",
  "334",
  "124",
  "chart260",
  "chart280",
]
`;

exports[`首进骨架与真版式对齐 > PnlAnalysisView:骨架块高序列(浏览器实测过) 1`] = `
[
  "26",
  "chart300",
  "chart300",
]
`;

exports[`首进骨架与真版式对齐 > PvMeterAnaView:骨架块高序列(浏览器实测过) 1`] = `
[
  "26",
  "224",
  "260",
  "102",
  "34",
  "298",
  "16",
  "360",
  "362",
  "350",
  "372",
  "564",
  "542",
  "505",
  "483",
]
`;

exports[`首进骨架与真版式对齐 > PvRoiView:骨架块高序列(浏览器实测过) 1`] = `
[
  "chart250",
  "chart300",
  "chart300",
  "210",
]
`;

exports[`首进骨架与真版式对齐 > TenantEnergyView:骨架块高序列(浏览器实测过) 1`] = `
[
  "chart454",
  "chart330",
  "chart300",
  "chart354",
  "chart300",
]
`;

exports[`首进骨架与真版式对齐 > TenantPeerView:骨架块高序列(浏览器实测过) 1`] = `
[
  "20",
  "20",
  "36",
  "280",
  "182",
  "68",
]
`;

exports[`首进骨架与真版式对齐 > TenantPortfolioView:骨架块高序列(浏览器实测过) 1`] = `
[
  "chart300",
  "chart300",
  "chart250",
  "156",
  "672",
  "486",
]
`;
